--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>New Year</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Inter:wght@400;500;600;700;800&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Inter:wght@400;500;600;700;800;900&family=Merriweather:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
@@ -17,8 +21,10 @@
       <div class="hero-content">
         <div class="hero-overlay"></div>
         <h4>happy new year</h4>
-        <h1>happy new year party</h1>
-        <h2>celebration</h2>
+        <h1>
+          happy new year party <br />
+          celebration
+        </h1>
       </div>
     </header>
     <main>
@@ -28,6 +34,51 @@
         <h3>ALL CATEGORIES</h3>
         <div>
           <img src="./images/New Year Photo.png" alt="" class="img-fluid" />
+        </div>
+      </section>
+      <section class="midnight-party">
+        <!-- <div class="midnight-overlay"></div> -->
+        <div class="party-content">
+          <h2>Welcome to <br />midnight party</h2>
+          <p>
+            Experience the thrill of the night at our Midnight Party and get
+            exclusive discounts on all drinks and food from 12am to 3am!
+          </p>
+          <button>join now</button>
+        </div>
+        <div>
+          <img class="img-fluid" src="./images/Group 70.png" alt="" />
+        </div>
+      </section>
+      <section class="join">
+        <div class="join-content">
+          <p><span>Place:</span> New Park Hotel</p>
+          <p><span>Date:</span> 31 December Night 2023</p>
+          <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+          <button>join now</button>
+        </div>
+      </section>
+      <section class="portfolio">
+        <h3 class="red-heading">THE BEST GIFTS</h3>
+        <h3 class="black-heading">Our Awesome Portfolio</h3>
+        <div class="portfolio-content">
+          <p class="text-content">
+            Partner with us and witness the awesome potential. Embark on a
+            journey of transformation with us. Together, we can harness the
+            power of our expertise to bring your ideas to life. Let us be your
+            trusted allies, guiding you through the creative process with
+            unwavering support and unwavering commitment
+          </p>
+        </div>
+        <div class="portfolio-imgs mb-25">
+          <img class="img-fluid" src="./images/Rectangle 3.png" alt="" />
+          <img class="img-fluid" src="./images/Rectangle 4.png" alt="" />
+          <img class="img-fluid" src="./images/Rectangle 5.png" alt="" />
+        </div>
+        <div class="portfolio-imgs">
+          <img class="img-fluid" src="./images/Rectangle 6.png" alt="" />
+          <img class="img-fluid" src="./images/Rectangle 7.png" alt="" />
+          <img class="img-fluid" src="./images/Rectangle 8.png" alt="" />
         </div>
       </section>
     </main>
