--- a/index.html
+++ b/index.html
@@ -81,6 +81,42 @@
           <img class="img-fluid" src="./images/Rectangle 8.png" alt="" />
         </div>
       </section>
+      <section class="news-letter">
+        <img class="img-fluid" src="./images/Group 61.png" alt="" />
+        <div class="news-letter-content">
+          <h3 class="black-heading">Subscribe Newsletter</h3>
+          <p class="text-content">
+            Join our growing community of engaged individuals and receive
+            exclusive updates on industry trends, innovative concepts, and
+            captivating content
+          </p>
+        </div>
+        <form>
+          <input type="email" name="" id="" placeholder="user@gmail.com" />
+          <button type="submit">Subscribe</button>
+        </form>
+      </section>
     </main>
+    <footer>
+      <div class="contact">
+        <div>
+          <p>44, Big Building Roosevelt Street</p>
+          <p>Beach Gardens Florida 33410</p>
+        </div>
+        <div>
+          <ul class="phone-website">
+            <li><img class="img-fluid" src="./images/Call.png" alt="" /></li>
+            <li>+00 123 584 124</li>
+          </ul>
+          <ul class="phone-website">
+            <li>
+              <img class="img-fluid" src="./images/Website.png" alt="" />
+            </li>
+            <li>www.website.com</li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+    </footer>
   </body>
 </html>
