--- a/index.html
+++ b/index.html
@@ -58,11 +58,71 @@
           <button>join now</button>
         </div>
       </section>
+      <!-- offer section -->
+      <section class="offer">
+        <div class="flex-row offer-content">
+          <div class="offer-text-content">
+            <h1>New best offer</h1>
+            <h2>coming soon</h2>
+            <p>
+              Excitement awaits! Stay tuned for our upcoming 'Best Offer' – a
+              captivating opportunity that you won't want to miss. Unveiling
+              soon, this exclusive deal is designed to elevate your experience.
+              Get ready to indulge in unparalleled value and unmatched benefits.
+              Keep your eyes peeled for the big reveal – coming soon!
+            </p>
+          </div>
+          <div class="offer-img">
+            <img class="img-fluid" src="./images/Ellipse 1.png" alt="" />
+          </div>
+          <div class="offer-text-img">
+            <h1>2024</h1>
+            <p>
+              Anticipate greatness! Our upcoming 'Best Offer' promises exclusive
+              perks and unbeatable value. Stay tuned for the exciting reveal, as
+              we prepare to elevate your experience. Summerize your expectations
+              – something extraordinary is just around the corner!
+            </p>
+            <img class="img-fluid" src="./images/Group 96.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- holiday section -->
+      <section class="holiday">
+        <div class="holiday-heading">
+          <h3>WHAT IS FUNCTIONAL</h3>
+          <h1><span>Holidays</span> Sale 50%</h1>
+          <p>
+            Embrace the spirit of the season with our Holidays Sale – a
+            sensational opportunity to elevate your shopping experience at an
+            incredible 50% off! Dive into a world of savings and festive cheer
+            as we present a carefully curated selection of products that cater
+            to your every need. From thoughtful gifts to personal indulgences,
+            this sale is your ticket to joyous celebrations without breaking the
+            bank.
+          </p>
+        </div>
+        <div class="holiday-content">
+          <div></div>
+          <div class="holiday-img-1">
+            <img src="./images/Group 75.png" alt="" class="img-fluid" />
+          </div>
+          <div class="holiday-img-2">
+            <img src="./images/Rectangle 1.png" alt="" class="img-fluid" />
+            <div class="holiday-50">
+              <img src="./images/Group 44.png" alt="" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+        <div class="holiday-bottom">
+          <img src="./images/Rectangle 2.png" alt="" class="img-fluid" />
+        </div>
+      </section>
       <section class="portfolio">
         <h3 class="red-heading">THE BEST GIFTS</h3>
         <h3 class="black-heading">Our Awesome Portfolio</h3>
         <div class="portfolio-content">
-          <p class="text-content">
+          <p class="portfolio-text-content">
             Partner with us and witness the awesome potential. Embark on a
             journey of transformation with us. Together, we can harness the
             power of our expertise to bring your ideas to life. Let us be your
@@ -112,11 +172,38 @@
             <li>
               <img class="img-fluid" src="./images/Website.png" alt="" />
             </li>
-            <li>www.website.com</li>
+            <li><a href="">www.website.com</a></li>
           </ul>
         </div>
       </div>
-      <hr>
+      <hr />
+      <div class="social-contact">
+        <div class="social-contact-links flex-row">
+          <a href="www.facebook.com"
+            ><img src="./images/Facebook.png" alt="" class="img-fluid"
+          /></a>
+          <a href="www.instagram.com"
+            ><img src="./images/Instagram.png" alt="" class="img-fluid"
+          /></a>
+          <a href="www.twitter.com"
+            ><img src="./images/Twitter.png" alt="" class="img-fluid"
+          /></a>
+          <a href="www.linkedin.com"
+            ><img src="./images/Linkedin.png" alt="" class="img-fluid"
+          /></a>
+        </div>
+      </div>
+      <hr />
+      <div class="footer-subscribe">
+        <div>
+          <p>2017, All Rights Reserved.</p>
+        </div>
+        <div>
+          <ul>
+            <li><a href="">Unsubscribe</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
