--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <img class="img-fluid" src="./images/Group 61.png" alt="" />
         <div class="news-letter-content">
           <h3 class="black-heading">Subscribe Newsletter</h3>
-          <p class="text-content">
+          <p class="news-letter-text-content">
             Join our growing community of engaged individuals and receive
             exclusive updates on industry trends, innovative concepts, and
             captivating content
